--- a/Pick_up.xaml
+++ b/Pick_up.xaml
@@ -14,7 +14,7 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="Button">
-                            <Border CornerRadius="10"  BorderBrush="#FF8A854D" BorderThickness="2,2,2,2" Background="#FFBE8D43">
+                            <Border CornerRadius="10"  BorderBrush="#FF8A854D" BorderThickness="2,2,2,2" Background="#FFAA8957">
                                 <ContentPresenter/>
                             </Border>
                         </ControlTemplate>
@@ -30,8 +30,8 @@
             </Style>
             <Style x:Key="TextBox" TargetType="TextBox">
                 <Setter Property="TextAlignment" Value="Center"/>
-                <Setter Property="FontSize" Value="36"/>
-                <Setter Property="Foreground" Value="Black"/>
+                <Setter Property="FontSize" Value="38"/>
+                <Setter Property="Foreground" Value="#FF252525"/>
                 <Setter Property="Margin" Value="10"/>
                 <Setter Property="Width" Value="60"/>
                 <Setter Property="Height" Value="60"/>
@@ -43,7 +43,7 @@
                 <Image Source="返回.png" Height="42" Width="42"/>
             </Button>
             <TextBlock Height="60" Width="242"></TextBlock>
-            <TextBlock Text="请输入取货码" FontSize="25" Height="39"></TextBlock>
+            <TextBlock Text="请输入取货码" FontSize="22" Height="29"></TextBlock>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <TextBlock Width="17"/>
@@ -51,14 +51,15 @@
                 <StackPanel Orientation="Vertical">
                     <TextBlock Height="34"></TextBlock>
                     <StackPanel Orientation="Horizontal" Height="103" Width="321">
-                        <TextBox Style="{StaticResource TextBox}" x:Name="value_0"></TextBox>
-                        <TextBox Style="{StaticResource TextBox}" x:Name="value_1"></TextBox>
-                        <TextBox Style="{StaticResource TextBox}" x:Name="value_2"></TextBox>
-                        <TextBox Style="{StaticResource TextBox}" x:Name="value_3"></TextBox>
+                        <TextBox Style="{StaticResource TextBox}" x:Name="value_0" IsHitTestVisible="False"/>
+                        <TextBox Style="{StaticResource TextBox}" x:Name="value_1" IsHitTestVisible="False"></TextBox>
+                        <TextBox Style="{StaticResource TextBox}" x:Name="value_2" IsHitTestVisible="False"></TextBox>
+                        <TextBox Style="{StaticResource TextBox}" x:Name="value_3" IsHitTestVisible="False"></TextBox>
                     </StackPanel>
                     <!--输入-->
-                    <TextBlock Height="31"></TextBlock>
-                    <Button Height="73" Width="276" Background="#FFE08F1F" Click="Open_Cabinet">
+                    <TextBlock x:Name="error" Height="39" FontSize="18" TextAlignment="Center" Foreground="#FFA81C1C"></TextBlock>
+                    <TextBlock Height="15"></TextBlock>
+                    <Button Height="73" Width="276" Background="#FFD38110" Click="Open_Cabinet">
                         <TextBlock Style="{StaticResource ButtonText}">开柜取货</TextBlock>
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
